fix(month): workweek value does not match date alignment in mini-model

--- a/ui/src/css/calendar-month.sass
+++ b/ui/src/css/calendar-month.sass
@@ -99,7 +99,6 @@
     flex-direction: column
     user-select: none
     padding: 0
-    justify-content: center
     align-items: center
 
   &__day
